fix(sbb-seat-reservation): fix gap for every deck, not just the one which causes the new gap

--- a/src/elements-experimental/seat-reservation/seat-reservation/seat-reservation.scss
+++ b/src/elements-experimental/seat-reservation/seat-reservation/seat-reservation.scss
@@ -224,7 +224,7 @@ $scrollbar-height: 16px;
 }
 
 // If there are overhanging elements we need to increase the gap between coaches
-.sbb-sr__list-coaches:has(.sbb-sr-coach-has-overhanging-elements) {
+.sbb-sr__list-decks:has(.sbb-sr-coach-has-overhanging-elements) .sbb-sr__list-coaches {
   gap: sbb-sr-functions.sr-px-to-rem(8);
 }
 
